--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,4 +1,124 @@
-*{
-	margin: 0;
-	padding: 0;
+:root {
+  --bg-primary: #ececec;
+  --main: #866ec7;
+  --text-secondary: #000000;
+  --text-primary: #ffffff;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  background-color: var(--bg-primary);
+}
+
+.login-container {
+  width: 80%;
+  height: 60%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.form-container {
+  background-color: var(--main);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 60%;
+  height: 90%;
+  border-radius: 20px;
+  color: var(--text-primary);
+  padding: 10px;
+}
+.form-container form {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  height: 80%;
+  width: 100%;
+}
+.form-container form input {
+  width: 50%;
+  height: 2.5em;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  padding: 0 10px;
+  font-size: 0.9rem;
+}
+.form-container form input:focus {
+  box-shadow: 0.1px 0.5px 4px var(--bg-primary);
+}
+.logo {
+  font-size: 3rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  color: var(--text-secondary);
+  border-bottom: 2px solid var(--text-secondary);
+}
+button {
+  width: 20%;
+  height: 2rem;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+  color: #252525;
+}
+button:hover {
+  letter-spacing: 3px;
+}
+a {
+  text-decoration: none;
+  color: var(--text-primary);
+}
+@media screen and (max-width: 950px) {
+  .logo {
+    font-size: 2rem;
+  }
+  .form-container {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 650px) {
+  .logo {
+    font-size: 1.2rem;
+  }
+  .form-container form input {
+    width: 90%;
+  }
+  .login-container {
+    height: 50%;
+  }
+  button {
+    width: 35%;
+  }
+}
+@media screen and (max-width: 405px) {
+  .logo {
+    font-size: 1rem;
+  }
+  button {
+    width: 35%;
+    letter-spacing: 1px;
+  }
+}
+@media screen and (max-width: 345px) {
+  .logo {
+    font-size: 0.7rem;
+  }
 }
