--- a/templates/rollcall/base.html
+++ b/templates/rollcall/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -14,39 +14,40 @@
       crossorigin="anonymous"
     />
     <style type="text/css">
-    	.som {
-			display: block;
-		}
+      .som {
+        display: block;
+      }
     </style>
     <title>{% block title %} {% endblock %}</title>
   </head>
 
   <body>
-  	{% include 'rollcall/nav.html' %}
-    {% block content %}
+    <nav><h2 class="logo">Monywa University Of Economic</h2>
+ 
+    </nav> 
+    {% block content %} 
 
     {% endblock %}
   </body>
 
   <script type="text/javascript">
-    
     function getCookie(name) {
-        let cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            const cookies = document.cookie.split(';');
-            for (let i = 0; i < cookies.length; i++) {
-                const cookie = cookies[i].trim();
-                // Does this cookie string begin with the name we want?
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
+      let cookieValue = null;
+      if (document.cookie && document.cookie !== "") {
+        const cookies = document.cookie.split(";");
+        for (let i = 0; i < cookies.length; i++) {
+          const cookie = cookies[i].trim();
+          // Does this cookie string begin with the name we want?
+          if (cookie.substring(0, name.length + 1) === name + "=") {
+            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+            break;
+          }
         }
-        return cookieValue;
+      }
+      return cookieValue;
     }
-    const csrftoken = getCookie('csrftoken');
-    
+    const csrftoken = getCookie("csrftoken");
   </script>
- <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+  
 </html>
