--- a/templates/rollcall/base.html
+++ b/templates/rollcall/base.html
@@ -23,7 +23,24 @@
 
   <body>
     <nav><h2 class="logo">Monywa University Of Economic</h2>
- 
+    {% if request.user.teacher %}
+    <div class="form-lee">
+              <form method="POST">
+                {% csrf_token %}
+                  
+                    <label class="form-label">Major</label>
+                    {{form.major}}
+                    <label class="form-label">Year</label>
+                    {{form.year}}
+                    <label class="form-label">Subject</label>
+                    {{form.subject}}
+                    <label class="form-label">Password</label>
+                    {{form.password}}
+                  
+                <input type="submit" name="" class="mt-3 btn" style="background-color: #866ec7;color: #fafafa;" >
+              </form>
+      </div>
+      {% endif %}
     </nav> 
     {% block content %} 
 
@@ -47,7 +64,10 @@
       return cookieValue;
     }
     const csrftoken = getCookie("csrftoken");
+
+    
   </script>
+  
   <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
   
 </html>
