--- a/templates/rollcall/home.html
+++ b/templates/rollcall/home.html
@@ -28,8 +28,9 @@
         <video id="preview"></video>
         <div class="form-check form-switch" style="position: absolute;bottom: 10px;left: 10px;">
           <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" id="camera" onchange="handleChange()">
-          <label class="form-check-label" for="flexSwitchCheckChecked">Camera</label>
+          <label class="form-check-label" for="flexSwitchCheckChecked" style="font-size: 0.8rem;color: #fafafa;">Camera</label>
         </div>
+    
       </div>
      
 
@@ -45,20 +46,30 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
     <script type="text/javascript">
-      let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
+      var videoId = document.getElementById('preview')
+      var scanner = new Instascan.Scanner({ video: videoId });
       var clicked = false;
+      var switchBtn = document.getElementById('switchCamera')
+      
+
+      
       function handleChange(){
         clicked = !clicked;
 
         if (clicked === false){
+          videoId.style.display = 'none';
+          videoId.style.transation = 'all 0.5s else';
           scanner.stop();
         }
         else{
+          videoId.style.display = 'block';
+          videoId.style.transation = 'all 0.5s else';
           Instascan.Camera.getCameras().then(function (cameras) {
+           
           if (cameras.length > 0) {
-            scanner.start(cameras[0]);
+              scanner.start(cameras[0]);
           } else {
-            console.error('No cameras found.');
+           window.alert("No camera found")
           }
           }).catch(function (e) {
           console.error(e);
@@ -92,17 +103,11 @@
     {% if teacher %}
     
     <div class="row">
-      <div class="form-lee">
-              <form method="POST">
-                {% csrf_token %}
-                {{form.as_p}}
-                <input type="submit" name="">
-              </form>
-      </div>
+      
       <div class="col-lg-3"> </div>
       <div
         class="col-12 col-lg-6"
-        style="overflow-y: scroll; height: 80vh;"
+      
       >
          <button class="create-btn">Create</button>
 
@@ -129,81 +134,30 @@
   <!-- End Create/Join Section -->
 
   <!-- Home -->
-  <section class="home" id="home">
-    <div class="row"  style="overflow-y: scroll; height: 80vh; padding: 20px">
-      <div class="col-0"></div>
-          <div
-            class="col-12 mb-3 d-flex justify-content-center align-items-center"
-          >
+  <section class="home p-3" id="home">
+    {% if request.user.teacher %}
+    <a href="{% url 'rollcall:post' %}"><button class="create-btn">Post</button></a>
+    {% endif %}
+    <div class="row pt-1 pb-5">
+
+      <div class="col-lg-0"></div>
+      {% for i in postarticle %}
+      <div class="col-lg-12 mb-3 d-flex justify-content-center align-items-center">
+
             <div class="post-container shadow">
               <div class="post-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                ratione libero aspernatur maiores inventore similique veniam rem
-                quo laborum numquam!
+                <div> <p> {{i.content|safe}} </p> </div>
+                <div> 
+                    <h5 class="text-end" style="font-size: 1.3rem;"> {{i.post.name}} </h5>
+                    <h5 class="text-end text-secondary" style="font-size: 1rem;"> {{i.date}} </h5>
+                </div>
+
               </div>
             </div>
-          </div>
-          <div
-            class="col-12 mb-3 d-flex justify-content-center align-items-center"
-          >
-            <div class="post-container shadow">
-              <div class="post-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                ratione libero aspernatur maiores inventore similique veniam rem
-                quo laborum numquam!
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-12 mb-3 d-flex justify-content-center align-items-center"
-          >
-            <div class="post-container shadow">
-              <div class="post-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                ratione libero aspernatur maiores inventore similique veniam rem
-                quo laborum numquam!Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-12 mb-3 d-flex justify-content-center align-items-center"
-          >
-            <div class="post-container">
-              <div class="post-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                ratione libero aspernatur maiores inventore similique veniam rem
-                quo laborum numquam!
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-12 mb-3 d-flex justify-content-center align-items-center"
-          >
-            <div class="post-container">
-              <div class="post-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                ratione libero aspernatur maiores inventore similique veniam rem
-                quo laborum numquam!
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-12 mb-3 d-flex justify-content-center align-items-center"
-          >
-            <div class="post-container">
-              <div class="post-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
-                ratione libero aspernatur maiores inventore similique veniam rem
-                quo laborum numquam!
-              </div>
-            </div>
-          </div>
-          <div class="col-0"></div>
+          
+      </div>
+      {% endfor %}
+      <div class="col-lg-0"></div>
     </div>
   </section>
 
@@ -211,38 +165,44 @@
 
   <!-- Profile Section -->
   <section class="pf" id="profile">
-    <div class="profile-container shadow">
-      <div class="pf-img-container">
-        <img src="profile.png" alt="" />
-      </div>
-      <div class="pf-detail-container">
-        {% if teacher %}
-        <div class="default">
-          <h4>Name</h4>
-          <h4>Major</h4>
-          <h4>Post</h4>
+    <div class="row">
+      <div class="col-12">
+        <div class="profile-container shadow">
+          <a href="{% url 'rollcall:logout' %}"><button class="logoutBtn">Logout</button></a>
+          <div class="pf-img-container">
+            <img src="profile.png" alt="" />
+          </div>
+          <div class="pf-detail-container">
+            {% if teacher %}
+            <div class="default">
+              <h4>Name</h4>
+              <h4>Major</h4>
+              <h4>Post</h4>
+            </div>
+            <div class="detail">
+              <h4>{{teacher.name}}</h4>
+              <h4>{{teacher.major}}</h4>
+              <h4>{{teacher.post}}</h4>
+            </div>
+            {% endif %} {% if student %}
+            <div class="default">
+              <h4>Name</h4>
+              <h4>Major</h4>
+              <h4>Year</h4>
+              <h4>Roll No.</h4>
+            </div>
+            <div class="detail">
+              <h4>{{student.name}}</h4>
+              <h4>{{student.major}}</h4>
+              <h4>{{student.year}}</h4>
+              <h4>{{student.roll}}</h4>
+            </div>
+            {% endif %}
+          </div>
         </div>
-        <div class="detail">
-          <h4>{{teacher.name}}</h4>
-          <h4>{{teacher.major}}</h4>
-          <h4>{{teacher.post}}</h4>
-        </div>
-        {% endif %} {% if student %}
-        <div class="default">
-          <h4>Name</h4>
-          <h4>Major</h4>
-          <h4>Year</h4>
-          <h4>Roll No.</h4>
-        </div>
-        <div class="detail">
-          <h4>{{student.name}}</h4>
-          <h4>{{student.major}}</h4>
-          <h4>{{student.year}}</h4>
-          <h4>{{student.roll}}</h4>
-        </div>
-        {% endif %}
       </div>
     </div>
+    
   </section>
   <!-- ENd Profile Section -->
 
