--- a/templates/rollcall/home.html
+++ b/templates/rollcall/home.html
@@ -141,7 +141,7 @@
     <div class="row pt-1 pb-5">
 
       <div class="col-lg-0"></div>
-      {% for i in postarticle %}
+      {% for i in post %}
       <div class="col-lg-12 mb-3 d-flex justify-content-center align-items-center">
 
             <div class="post-container shadow">
