--- a/static/css/login.css
+++ b/static/css/login.css
@@ -10,7 +10,7 @@
 }
 body {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   background-color: var(--bg-primary);
 }
