--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,7 +76,7 @@ body {
 .pf {
   opacity: 0;
   pointer-events: none;
-  height: 80vh;
+  min-height: 80vh;
   width: 100%;
   display: flex;
   align-items: center;
