--- a/static/css/main.css
+++ b/static/css/main.css
@@ -375,6 +375,13 @@ body {
   width: 100%;
 }
 
+@media screen and (max-height: 400px){
+  .form-lee{
+    width: 100%;
+    height: 100%;
+  }
+}
+
 @media screen and (min-width: 370px){
   .scan-container{
     width: 300px;
