--- a/templates/rollcall/post.html
+++ b/templates/rollcall/post.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div style="width: 100%;height: 90vh;display: flex;justify-content: center;align-items: center;padding: 1rem;">
+<div style="width: 100%;height: 90vh;display: flex;justify-content: center;align-items: flex-start;padding: 1rem;">
 	<form method="POST" style="display: flex;justify-content: space-around;align-items: center;flex-direction: column;">
 		{% csrf_token %}
 		{{form.post}}
